{
  "version": 4,
  "terraform_version": "1.15.4",
  "serial": 26,
  "lineage": "7160fff6-4fa3-bf5e-ce10-ae967013d8d2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-035528e5c0f494354",
            "arn": "arn:aws:ec2:us-east-1:122610517295:elastic-ip/eipalloc-035528e5c0f494354",
            "association_id": "eipassoc-03318ba6282b6692e",
            "domain": "vpc",
            "id": "eipalloc-035528e5c0f494354",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0f378a196cf4f499e",
            "private_dns": "ip-10-0-1-15.ec2.internal",
            "private_ip": "10.0.1.15",
            "public_dns": "ec2-34-226-132-111.compute-1.amazonaws.com",
            "public_ip": "34.226.132.111",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ai-ml-aiops-devops-nat-eip"
            },
            "tags_all": {
              "Name": "ai-ml-aiops-devops-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122610517295:internet-gateway/igw-0addfdf22214611a8",
            "id": "igw-0addfdf22214611a8",
            "owner_id": "122610517295",
            "tags": {
              "Name": "ai-ml-aiops-devops-igw"
            },
            "tags_all": {
              "Name": "ai-ml-aiops-devops-igw"
            },
            "vpc_id": "vpc-0fc77c5c89b91199f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-035528e5c0f494354",
            "association_id": "eipassoc-03318ba6282b6692e",
            "connectivity_type": "public",
            "id": "nat-00dc1d2989806559b",
            "network_interface_id": "eni-0f378a196cf4f499e",
            "private_ip": "10.0.1.15",
            "public_ip": "34.226.132.111",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-078cb867d388e2823",
            "tags": {
              "Name": "ai-ml-aiops-devops-nat"
            },
            "tags_all": {
              "Name": "ai-ml-aiops-devops-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0553d6ffa8c454a141080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00dc1d2989806559b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0553d6ffa8c454a14",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0addfdf22214611a8",
            "id": "r-rtb-097b2e8beccfd60d41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-097b2e8beccfd60d4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122610517295:route-table/rtb-0553d6ffa8c454a14",
            "id": "rtb-0553d6ffa8c454a14",
            "owner_id": "122610517295",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00dc1d2989806559b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ai-ml-aiops-devops-private-rt"
            },
            "tags_all": {
              "Name": "ai-ml-aiops-devops-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fc77c5c89b91199f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122610517295:route-table/rtb-097b2e8beccfd60d4",
            "id": "rtb-097b2e8beccfd60d4",
            "owner_id": "122610517295",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0addfdf22214611a8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ai-ml-aiops-devops-public-rt"
            },
            "tags_all": {
              "Name": "ai-ml-aiops-devops-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fc77c5c89b91199f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0196f2bdd791c3ce7",
            "route_table_id": "rtb-0553d6ffa8c454a14",
            "subnet_id": "subnet-04977c515b62f5ee2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed92c7433f065f48",
            "route_table_id": "rtb-0553d6ffa8c454a14",
            "subnet_id": "subnet-0b29cea8e8dfa8f9c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dea1352ac381f7a8",
            "route_table_id": "rtb-097b2e8beccfd60d4",
            "subnet_id": "subnet-078cb867d388e2823"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a0ef37cba3a313fe",
            "route_table_id": "rtb-097b2e8beccfd60d4",
            "subnet_id": "subnet-0e8c3c49499b12d52"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122610517295:subnet/subnet-04977c515b62f5ee2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04977c515b62f5ee2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "122610517295",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ai-ml-aiops-devops-private-1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "ai-ml-aiops-devops-private-1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0fc77c5c89b91199f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122610517295:subnet/subnet-0b29cea8e8dfa8f9c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b29cea8e8dfa8f9c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "122610517295",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ai-ml-aiops-devops-private-2",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "ai-ml-aiops-devops-private-2",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0fc77c5c89b91199f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122610517295:subnet/subnet-078cb867d388e2823",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-078cb867d388e2823",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "122610517295",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ai-ml-aiops-devops-public-1",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "ai-ml-aiops-devops-public-1",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0fc77c5c89b91199f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122610517295:subnet/subnet-0e8c3c49499b12d52",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e8c3c49499b12d52",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "122610517295",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ai-ml-aiops-devops-public-2",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "ai-ml-aiops-devops-public-2",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0fc77c5c89b91199f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122610517295:vpc/vpc-0fc77c5c89b91199f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-076ca22badb6dba62",
            "default_route_table_id": "rtb-02fed4febf7d7792f",
            "default_security_group_id": "sg-0a6adc5bbb89c040f",
            "dhcp_options_id": "dopt-02278a6662edfeaf7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fc77c5c89b91199f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02fed4febf7d7792f",
            "owner_id": "122610517295",
            "tags": {
              "Name": "ai-ml-aiops-devops-vpc"
            },
            "tags_all": {
              "Name": "ai-ml-aiops-devops-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}